# nil

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 001_init.sql  002_add_steth.sql
backend/src/listener/: events.rs
backend/src/models/: mod.rs
backend/src/routes/: history.rs  stats.rs
contracts/: .env.example  NilLido_flat.sol  NilStETH_flat.sol  NilToken_flat.sol  NilVault_flat.sol  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: NilToken.sol  NilVault.sol
contracts/contracts/staking/: NilLido.sol  NilStETH.sol
contracts/scripts/: deploy.js
contracts/test/: NilVault.test.js
docs/: architecture-diagram.md  architecture.md  security.md  system-components.md  tech-stack.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/assets/: ripple_field.spline
frontend/src/: App.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/ui/: BackgroundScene.jsx  Badge.jsx  Skeleton.jsx  StatCard.jsx
frontend/src/components/vault/: DepositForm.jsx  PositionCard.jsx  RedeemForm.jsx
frontend/src/components/wallet/: ConnectButton.jsx
frontend/src/config/: NilLido.json  NilStETH.json  NilToken.json  NilVault.json  contracts.js  wagmi.js
frontend/src/hooks/: usePosition.js  usePrice.js  useVault.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  Vault.jsx
frontend/src/styles/: index.css
